--- a/css/variables.css
+++ b/css/variables.css
@@ -82,5 +82,5 @@
     /* --- Layout --- */
     --content-max-width: 1200px;
     --nav-height:        64px;
-    --player-height:     72px;
+    --player-height:     40px;
 }
